# goit-pythonweb-hw-04

./: pyproject.toml
src/app/: logging_config.py  main.py
