[project]
name = "goit-pythonweb-hw-04"
version = "0.1.0"
description = ""
authors = [
    {name = "Dina Khomenko", email = "dinamastercs@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
asyncio = ">=3.4.3,<4.0.0"
aioshutil = ">=1.5,<2.0"
aiofile = "^3.9.0"
aiopath = "^0.7.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

